--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=mysql+mysqlconnector://root:root@localhost:3306/mailer_db
+DATABASE_URL=sqlite:///app.db
+# mysql+mysqlconnector://root:root@localhost:3306/mailer_db
