added render postgres db in .env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=sqlite:///app.db
+DATABASE_URL=postgresql+psycopg2://mailer_db_jqp4_user:B0E8OLBiB7RzYXjdIMpi9uYohjrMVvqG@dpg-d0hjb13e5dus73b3dlj0-a.oregon-postgres.render.com/mailer_db_jqp4
 # mysql+mysqlconnector://root:root@localhost:3306/mailer_db
